# FastAPI-Learn

./: .gitignore  pyproject.toml
src/: main.py  schemas.py
src/products/: router.py
src/routers/: products.py  users.py
src/users/: router.py
